--- a/accounts/index.html
+++ b/accounts/index.html
@@ -25,7 +25,12 @@
         <img id="logo_big" src="/capy.png">
         <div>
             <h1>Hello!</h1>
-            <p class="textfirst">I'am Kacpér<br> I like play games and ride a bike<br>I' am beginner programist</p>
+            <p class="textfirst">That's some of my accounts:<br> <a href="https://github.com/Wojjakk">Github</a>
+                <br>
+                <a href="https://steamcommunity.com/id/mlodyTP">Steam</a>
+                <br>
+                <p><a href="https://discord.com">Discord</a>: Kacpér#5181</p>
+            </p>
         </div>
     </div>
 
