--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img id="logo_big" src="/capy.png">
         <div>
             <h1>Hello!</h1>
-            <p class="textfirst">I'am Kacpér<br> I like play games and ride a bike<br>I' am beginner programist</p>
+            <p class="textfirst">I'am Kacpér,<br> I like play games and ride a bike,<br>I' am beginner programist</p>
         </div>
     </div>
 
