--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My site</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/x-icon" href="/logo.png">
+    <link rel="icon" type="image/x-icon" href="/capybara.png">
 
 </head>
 
 <body>
     <nav>
-        <img src="/logo.png" alt="Logo" class="logo">
+        <img src="/capybara.png" alt="Logo" class="logo">
         <div id="menu">
             <br>
             <a href="/index.html" id="mp"><i class="fas fa-address-card"></i>Main Page</a>
@@ -22,7 +22,7 @@
     </nav>
 
     <div id="first">
-        <img id="logo_big" src="/capy.png">
+        <img id="logo_big" src="/capybara.png">
         <div>
             <h1>Hello!</h1>
             <p class="textfirst">I'am Kacpér,<br> I like play games and ride a bike,<br>I' am beginner programist</p>
