--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <footer>
         <div class="text">
-            <p>Meloudi. All Rights Reserved. <br>Icons used from: <a href="https://fontawesome.com">Font Awesome</a></p>
+            <p>© Meloudi. All Rights Reserved. <br>Icons used from: <a href="https://fontawesome.com">Font Awesome</a></p>
         </div>
     </footer>
 
