--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <br>
             <a href="/index.html" id="mp"><i class="fas fa-address-card"></i>Main Page</a>
             <a href="../accounts" id="accounts"><i class="fas fa-user-circle"></i>Accounts</a>
+            <a href="/a.html" id="mp"><i class="fas fa-user-circle"></i>Markdown</a>
         </div>
     </nav>
 
