--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My site</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/x-icon" href="/capybara.png">
+    <link rel="icon" type="image/x-icon" href="/capybara.png" href="hidden.html">
 
 </head>
 
