--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My site</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/x-icon" href="/capybara.png" href="hidden.html">
+    <link rel="icon" type="image/x-icon" href="/capybara.png">
 
 </head>
 
 <body>
     <nav>
-        <img src="/capybara.png" alt="Logo" class="logo">
+        <a href="hidden.html"><img src="/capybara.png" alt="Logo" class="logo"></a>
         <div id="menu">
             <br>
             <a href="/index.html" id="mp"><i class="fas fa-address-card"></i>Main Page</a>
