--- a/hidden.html
+++ b/hidden.html
@@ -1,1 +1,6 @@
+<style>
+  body{
+    background-color: #222;
+    }
+</style>
 <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D329375259090226%26id%3D100077101377640%26substory_index%3D-1&show_text=true&width=500" width="500" height="479" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
