--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div id="menu">
             <br>
             <a href="/index.html" id="mp"><i class="fas fa-address-card"></i>Main Page</a>
-            <a href="github.com/Wojjakk" id="accounts"><i class="fas fa-user-circle"></i>My profile</a>
-            <a href="paypal.me/Kacper2137420+" id="accounts"><i class="fas fa-user-circle"></i>Donate</a>
+            <a href="https://github.com/Wojjakk" id="accounts"><i class="fas fa-user-circle"></i>My profile</a>
+            <a href="https://paypal.me/Kacper2137420+" id="accounts"><i class="fas fa-user-circle"></i>Donate</a>
         </div>
     </nav>
 
