--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <a href="hidden.html"><img src="/capybara.png" alt="Logo" class="logo"></a>
         <div id="menu">
             <br>
-            <a href="/index.html" id="mp"><i class="fas fa-address-card"></i>Main Page</a>
-            <a href="https://github.com/Wojjakk" id="accounts"><i class="fas fa-user-circle"></i>My profile</a>
-            <a href="https://paypal.me/Kacper2137420+" id="accounts"><i class="fas fa-user-circle"></i>Donate</a>
+            <a href="/index.html" id="mp">Main Page</a>
+            <a href="https://github.com/Wojjakk" id="accounts">My profile</a>
+            <a href="https://wojjakk.github.io/Symbols/html" id="accounts">Symbol remover</a>
         </div>
     </nav>
 
