--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@
         <img id="logo_big" src="/capybara.png">
         <div>
             <h1>Hello!</h1>
-            <p class="textfirst">I'am Kacpér,<br> I like play games and ride a bike,<br>I' am beginner programist</p>
+            <p class="textfirst">I'am Kacpér, You can know me as Wojjakk or Meloudi too.<br> I dont make anything special.<br>I' am beginner programist and big plans for future</p>
         </div>
     </div>
 
     <footer>
         <div class="text">
-            <p>© Meloudi. All Rights Reserved. <br>Icons used from: <a href="https://fontawesome.com">Font Awesome</a></p>
+            <p>© Meloudi. All Rights Reserved.</p>
         </div>
     </footer>
-
-    <script src="https://kit.fontawesome.com/c21e22bf31.js" crossorigin="anonymous"></script>
 </body>
 </html>
