--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <br>
             <a href="/index.html" id="mp">Main Page</a>
             <a href="https://github.com/Wojjakk" id="accounts">My profile</a>
-            <a href="https://wojjakk.github.io/Symbols/html" id="accounts">Symbol remover</a>
+            <a href="https://wojjakk.github.io/particles.js" id="accounts">Particles js</a>
         </div>
     </nav>
 
