new thing on site :D

--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
             <p>© Meloudi. All Rights Reserved.</p>
         </div>
     </footer>
+    <canvas id="myCanvas"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
