--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img id="logo_big" src="/capybara.png">
         <div>
             <h1>Hello!</h1>
-            <p class="textfirst">I'm Kacpér, You can know me as Wojjakk or Meloudi too.<br> I dont make anything special.<br>I'm beginner programist and I have big plans for future.</p>
+            <p class="textfirst">I'm Kacpér, You can know me as Wojjakk or Meloudi too.<br> I dont make anything special.<br>I'm beginner programmer and I have big plans for future.</p>
         </div>
     </div>
 
